# version-differ-old

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: __init__.py  test_version_differ.py
version_differ/: __init__.py  cli.py  version_differ.py
