[tool.poetry]
name = "version-differ"
version = "0.10.0"
description = "Accurate diffing between two versions of a package"
authors = ["Nasif Imtiaz <nasifimtiaz88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pygit2 = "^1.7.1"
PyDriller = "^2.0"
GitPython = "^3.1.24"
unidiff = "^0.7.0"
urllib3 = "^1.26.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
